force-app/main/default/objects/ARF_Note__c/ARF_Note__c.object-meta.xml
<CustomObject>
    <description>Internal notes linked to accounts, invoices, disputes, etc.</description>
    <label>AR Note</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>AR Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>