force-app/main/default/objects/ARF_Note__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account this note belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR_Notes</relationshipLabel>
    <relationshipName>AR_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>