force-app/main/default/objects/ARF_Note__c/fields/Dispute__c.field-meta.xml
<CustomField>
    <fullName>Dispute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related dispute</description>
    <label>Dispute</label>
    <referenceTo>ARF_Dispute__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>