force-app/main/default/objects/ARF_Note__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related invoice</description>
    <label>Invoice</label>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>