force-app/main/default/objects/ARF_Note__c/fields/Is_Pinned__c.field-meta.xml
<CustomField>
    <fullName>Is_Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this note is pinned to top</description>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>