force-app/main/default/objects/ARF_Note__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Note title or summary</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>