force-app/main/default/objects/ARF_Note__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Category of note</description>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>General</fullName><default>false</default><label>General</label></value>
                <value><fullName>Call Log</fullName><default>false</default><label>Call Log</label></value>
                <value><fullName>Meeting Notes</fullName><default>false</default><label>Meeting Notes</label></value>
                <value><fullName>Follow Up</fullName><default>false</default><label>Follow Up</label></value>
                <value><fullName>Internal</fullName><default>false</default><label>Internal</label></value>
                <value><fullName>System</fullName><default>false</default><label>System</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>